fix remove myself btn alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -378,3 +378,8 @@ input.checkbox-btn {
 .col-md-6:nth-child(2n+1) {
     clear: both;
 }
+
+.group-im-in-container {
+	display: inline-block;
+	min-width: 150px;
+}
